# decopon

./: .dockerignore  .env.android.example  .env.app.example  .env.example  .env.web.example  .env.windows.example  .gitattributes  .gitignore  Agent.md  Dockerfile  Justfile  MEMO.md  README.md  _ide_helper.php  biome.json  components.json  composer.json  package-lock.json  package.json  package.json5  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.js
.cargo/: config.local.example.toml  config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  deploy-demo.yml  release.yml  sites.yml
app/Enums/: LogSource.php
app/Helpers/: helper.php
app/Http/Controllers/: PreferenceController.php  TagController.php  TaskController.php
app/Http/Middleware/: HandleInertiaRequests.php  HandleSetLocaleRequests.php
app/Listeners/: AutoLogListener.php
app/Models/: Log.php  Preference.php  Tag.php  Task.php  TimeEntry.php  User.php
app/Providers/: AppServiceProvider.php  EventServiceProvider.php
app/Traits/: GetAdminTrait.php
backend/: .gitignore  Agent.md  composer.json
backend/app/Enums/: TimeEntryStatus.php
backend/app/Events/: TaskCompletedEvent.php
backend/app/Models/: Tag.php  User.php
backend/app/Notifications/: VerifyEmailNotification.php
backend/axum/: .env.example  .gitignore  Agent.md  Cargo.toml  README.md
backend/axum/migration/: Cargo.toml
backend/axum/migration/src/: lib.rs  m20250725_022035_create_users_table.rs  m20250725_022428_create_tasks_table.rs  m20250725_030614_create_decopon_sessions_table.rs  m20250725_030642_create_logs_table.rs  m20250725_030719_create_tags_table.rs  m20250725_044431_create_log_tag_table.rs  m20250725_044442_create_tag_task_table.rs
backend/axum/src/: lib.rs  main.rs
backend/axum/src/dto/: auth.rs  common.rs  decopon_sessions.rs  logs.rs  mod.rs  preferences.rs  profiles.rs  tags.rs  tasks.rs
backend/axum/src/entities/: decopon_sessions.rs  logs.rs  tags.rs  tasks.rs  users.rs
backend/axum/src/errors/: mod.rs
backend/axum/src/extractors/: authenticated_user.rs
backend/axum/src/middleware/: auth.rs
backend/axum/src/routes/: auth.rs  decopon_sessions.rs  logs.rs  mod.rs  posts.rs.example  preferences.rs  profiles.rs  tags.rs  tasks.rs
backend/axum/src/services/: auth.rs  decopon_sessions.rs  logs.rs  mails.rs  mod.rs  posts.rs.example  preferences.rs  profiles.rs  single_user.rs  tag_task.rs  tags.rs  tasks.rs  users.rs
backend/axum/tests/: auth_middleware.rs  decopon_sessions.rs  delete_handlers.rs  get_auth_user.rs  task_tag_integration.rs  update_task_transaction.rs
backend/axum/tests/common/: mod.rs
backend/bootstrap/: app.php
backend/config/: Cargo.toml  cors.php  sanctum.php  ziggy.php
backend/routes/: api.php  auth.php  proxy.dev.php  web.php
backend/runtime/: Cargo.toml
backend/runtime/src/: lib.rs
backend/services/: Cargo.toml
backend/services/src/: context.rs  errors.rs  lib.rs
backend/services/src/entities/: decopon_sessions.rs  log_tag.rs  logs.rs  mod.rs  prelude.rs  tag_task.rs  tasks.rs
backend/services/src/usecases/: auth.rs  decopon_sessions.rs  logs.rs  mails.rs  mod.rs  preferences.rs  profiles.rs  single_user.rs  tag_task.rs  tags.rs  tasks.rs  users.rs
config/: app.php  cors.php
database/factories/: TaskFactory.php  TimeEntryFactory.php
database/migrations/: 2024_12_20_053923_create_time_entries_table.php  2025_01_08_063535_create_logs_table.php  2025_01_08_064157_create_tags_table.php  2025_01_08_065407_create_log_tag_table.php  2025_02_05_062500_create_preferences_table.php  2025_02_07_050133_create_tag_task_table.php
database/seeders/: BaseSeeder.php  DatabaseSeeder.php  LogsTableSeeder.php  MasterSeeder.php  TagsTableSeeder.php  TasksTableSeeder.php  TimeEntriesTableSeeder.php  UsersTableSeeder.php
documents/: ADR-frontend-api-transport.md  GUIDesign.md  MEMO.md  README.jp.md  ipc-architecture-guide.md  windows-ipc-migration.md
experimental/: README.md
experimental/dioxus/: Cargo.toml
frontend/: .gitignore  Agent.md  pnpm-lock.yaml  tsconfig.json  tsconfig.paths.json  vite.aliases.ts  vite.config.js
frontend/app/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/app/android/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/app/android/src-tauri/.cargo/: config.toml
frontend/app/android/src-tauri/capabilities/: default.json
frontend/app/android/src-tauri/icons/: icon.icns
frontend/app/android/src-tauri/src/: lib.rs  main.rs
frontend/app/android/src-tauri/src/services/: mod.rs
frontend/app/ipc/: Cargo.toml
frontend/app/ipc/src/: auth.rs  decopon_sessions.rs  error.rs  lib.rs  logs.rs  preferences.rs  profiles.rs  tags.rs  tasks.rs
frontend/app/tauri-common/: Cargo.toml
frontend/app/tauri-common/src/: init_marker.rs  init_state.rs  lib.rs  services.rs  splashscreen.html  splashscreen.rs
frontend/app/tauri-host-common/: Cargo.toml
frontend/app/tauri-host-common/src/: bootstrap.rs  commands.rs  init_state.rs  lib.rs  services.rs  splashscreen.rs
frontend/core/: .gitignore  components.json  depcheck.config.cjs  package.json  tsconfig.json  vite.config.ts  vitest.workspace.js
frontend/design-tokens/: package.json
frontend/src/js/: app.tsx
frontend/web/: .gitignore  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.workspace.js
frontend/windows/: README.md  package.json  vite.config.ts
resources/css/: app.css
resources/js/: app.tsx
routes/: api.php  web.php
scripts/: 00-laravel-deploy.sh  android-halt.mjs  check-i18n-keys.mjs  clean.js  deploy.sh.example  i18nKeyCheck.sh  measure-colors.mjs  remove-build-artifacts.mjs  sync-version.mjs
sites/: index.html  package.json  tsconfig.json  vite.config.ts
sites/src/: App.tsx  LandingPage.tsx  Welcome.tsx  main.tsx  vite-env.d.ts
tests/Feature/: TagApiControllerTest.php  TaskApiControllerTest.php
(+510 files in other folders)
