[package]
name = "decopon-axum"
version = "0.1.0"
edition = "2024"

[features]
default = ["app"]
app = [
    "decopon-services/sqlite",
    "decopon-runtime/sqlite",
    "sea-orm/sqlx-sqlite",
]
web = [
    "decopon-services/postgres",
    "decopon-services/mail",
    "decopon-runtime/postgres",
    "decopon-runtime/mail",
    "sea-orm/sqlx-postgres",
]

[dependencies]
migration = { path = "migration" } # depends on your needs
decopon-services = { path = "../services", default-features = false }
decopon-runtime = { path = "../runtime", default-features = false }
decopon-config = { path = "../config" }

axum = "~0.8.4"
axum-extra = { version = "~0.10.0", default-features = false, features = ["query"] }
axum-macros = "0.5.0"
axum-password-worker = "0.4.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
tokio = { version = "~1.47.1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "~1.1.14", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono"] }
serde = { version = "~1.0.219", features = ["derive"] }
serde_json = "~1.0.141"
jsonwebtoken = "~9.3.1"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "pool", "tokio1-rustls-tls"] }
thiserror = "2"
rand = "0.8"
sha2 = "0.10"
tower-http = {version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "app"
path = "src/bin/app.rs"
required-features = ["app"]

[[bin]]
name = "web"
path = "src/bin/web.rs"
required-features = ["web"]
