[package]
name = "decopon-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
sqlite = ["decopon-services/sqlite", "sea-orm/sqlx-sqlite"]
postgres = ["decopon-services/postgres", "sea-orm/sqlx-postgres"]
mail = ["decopon-services/mail"]

[dependencies]
axum-password-worker = "0.4.1"
decopon-services = { path = "../services", default-features = false }
decopon-config = { path = "../config" }
migration = { path = "../axum/migration" }
sea-orm = { version = "~1.1.14", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "~1.1.14", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
thiserror = "2"
tracing = "0.1.41"
