[package]
name = "decopon-tauri-common"
version = "0.1.0"
edition = "2021"

[dependencies]
decopon-runtime = { path = "../../../backend/runtime", features = ["sqlite"] }
migration = { path = "../../../backend/axum/migration" }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tauri = { version = "2", features = ["test"] }
thiserror = "1"
tracing = "0.1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
