[package]
name = "decopon-tauri-host-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
decopon-axum = { path = "../../../backend/axum" }
decopon-runtime = { path = "../../../backend/runtime", features = ["sqlite"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
tauri = { version = "2", features = ["test"] }
thiserror = "1"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sys-locale = "0.3"
